bynkc/tests/fixtures/positive/184_adapter_consumes_adapter/src/tokens.karn
adapter tokens {
  binding "./tokens.binding.ts"
  consumes logging { Log }

  exports capability { Jwt }

  capability Jwt {
    fn sign(sub: String) -> Effect[String]
  }

  provides Jwt = StubJwt given Log
}
