bynkc/tests/fixtures/negative/144_requires_unpinned_dep/src/badpkg.karn
adapter badpkg {
  binding "./badpkg.binding.ts" requires { "evil": "*" }

  capability C {
    fn f() -> Effect[Int]
  }

  provides C = Impl
}
